src/components/About/index.scss
.time-line{
    min-width: 50%;
    display: flex;
    justify-content: center;
    z-index: 6;
    height: 90%;
    overflow: visible;

    .show-scroll-indicator{
        font-size: 50px;
        color: white;
        position: fixed;
        bottom: 1%;
        transform: translate(-50%);
        transition: opacity 0.5s ease-in-out;
        
        svg {
            animation: glow 1s ease-in-out infinite alternate;
          }

          @keyframes glow {
            from {
                filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.5));
            }
            to {
                filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 1));
            }
        }
    }
       

    .vertical-timeline-element-content{
        box-shadow: rgba(255, 215, 0, 0.25) -5px 5px, rgba(255, 215, 0, 0.175) -10px 10px, rgba(255, 215, 0, 0.075) -15px 15px, rgba(255, 215, 0, 0.025) -20px 20px, rgba(255, 215, 0, 0.025) -25px 25px;   
        
        .vertical-timeline-element-date{
            font-weight: bold;
            font-size: 12px;
            color: #ffd700;
            opacity: 1;
        }
    
    }

    .vertical-timeline--two-columns.vertical-timeline--animate .vertical-timeline-element.vertical-timeline-element--right .vertical-timeline-element-content.bounce-in, .vertical-timeline--two-columns.vertical-timeline--animate .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content.bounce-in {
        box-shadow: rgba(255, 215, 0, 0.3) 5px 5px, rgba(255, 215, 0, 0.2) 10px 10px, rgba(255, 215, 0, 0.1) 15px 15px, rgba(255, 215, 0, 0.05) 20px 20px, rgba(255, 215, 0, 0.025) 25px 25px;   
    }
}
.time-line::-webkit-scrollbar {
    display: none;
}

